test/expected/regression-net-socket.txt
/scripts/regression-net-socket.js:7
  throw new Error('trace');
  ^

Error: trace
    at Server.<anonymous> (/scripts/regression-net-socket.js:7:9)
    at emitOne (events.js:78:13)
    at Server.emit (events.js:170:7)
    at TCP.onconnection (net.js:1434:8)
    at exports._createServerHandle (net.js:1165:14)
    at Server._listen2 (net.js:1222:14)
    at listen (net.js:1274:10)
    at net.js:1383:9
    at GetAddrInfoReqWrap.asyncCallback [as callback] (dns.js:64:16)
    at GetAddrInfoReqWrap.onlookup [as oncomplete] (dns.js:83:10)
    at Object.lookup (dns.js:166:19)
    at listenAfterLookup (net.js:1378:20)
    at Server.listen (net.js:1374:5)
    at Object.<anonymous> (/scripts/regression-net-socket.js:10:8)
    at Module._compile (module.js:399:26)
    at Object.Module._extensions..js (module.js:406:10)
    at Module.load (module.js:345:32)
    at Function.Module._load (module.js:302:12)
    at Function.Module.runMain (module.js:431:10)
    at startup (node.js:141:18)
    at node.js:977:3
